Fix image sizing on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,9 @@ p{
 }
 
 img{
-    width: 15%;
-    height: 15%;
+    max-width: 20%;
+    min-width: 200px;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
